# archetype-cmake

./: README.md
multi-module/: CMakeLists.txt  README.md  clone.sh
multi-module/cmake/: CMakeInclude.txt
multi-module/prototype-bin/: CMakeLists.txt
multi-module/prototype-lib/: CMakeLists.txt
single-module/: CMakeLists.txt  clone.sh  cmake.sh
